--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>fighter arena</title>
     <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/bootstrap/2.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/bootstrap/2.3.1/css/bootstrap-responsive.min.css">
+
+
+
     <link rel="stylesheet" type="text/css" href="basic.css">
 </head>
 <body>
@@ -21,20 +24,20 @@
         </div>
         <div class="keyboard">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>esc</li>
+                <li>F1</li>
+                <li>F2</li>
+                <li>F3</li>
+                <li>F4</li>
+                <li>F5</li>
+                <li>F6</li>
+                <li>F7</li>
+                <li>F8</li>
+                <li>F9</li>
+                <li>F10</li>
+                <li>F11</li>
+                <li>F12</li>
+                <li><span class="iec_power">&#x23FB;</span></li>
                 <li><span>~</span><span>`</span></li>
                 <li><span>!</span><span>1</span></li>
                 <li><span>@</span><span>2</span></li>
@@ -46,7 +49,7 @@
                 <li><span>*</span><span>8</span></li>
                 <li><span>(</span><span>9</span></li>
                 <li><span>)</span><span>0</span></li>
-                <li><span>—</span><span>-</span></li>
+                <li><span>--</span><span>-</span></li>
                 <li><span>+</span><span>=</span></li>
                 <li></li>
                 <li></li>
@@ -62,7 +65,7 @@
                 <li>P</li>
                 <li><span>{</span><span>[</span></li>
                 <li><span>}</span><span>]</span></li>
-                <li><span>|</span><span>\</span></li>
+                <li><span>&#448;</span><span>\</span></li>
                 <li></li>
                 <li>A</li>
                 <li>S</li>
