finish main css

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
         </div>
         <div class="keyboard">
             <ul>
-                <li>esc</li>
-                <li>F1</li>
-                <li>F2</li>
-                <li>F3</li>
-                <li>F4</li>
-                <li>F5</li>
-                <li>F6</li>
-                <li>F7</li>
-                <li>F8</li>
-                <li>F9</li>
-                <li>F10</li>
-                <li>F11</li>
-                <li>F12</li>
-                <li><span class="iec_power">&#x23FB;</span></li>
+                <li><span id = 'esc'>esc</span></li>
+                <li><span id = 'f1'>F1</span></li>
+                <li><span id = 'f2'>F2</span></li>
+                <li><span id = 'f3'>F3</span></li>
+                <li><span id = 'f4'>F4</span></li>
+                <li><span id = 'f5'>F5</span></li>
+                <li><span id = 'f6'>F6</span></li>
+                <li><span id = 'f7'>F7</span></li>
+                <li><span id = 'f8'>F8</span></li>
+                <li><span id = 'f9'>F9</span></li>
+                <li><span id = 'f10'>F10</span></li>
+                <li><span id = 'f11'>F11</span></li>
+                <li><span id = 'f12'>F12</span></li>
+                <li ><span id = 'power' class="iec_power">&#x23FB;</span></li>
                 <li><span>~</span><span>`</span></li>
                 <li><span>!</span><span>1</span></li>
                 <li><span>@</span><span>2</span></li>
@@ -49,10 +49,10 @@
                 <li><span>*</span><span>8</span></li>
                 <li><span>(</span><span>9</span></li>
                 <li><span>)</span><span>0</span></li>
-                <li><span>--</span><span>-</span></li>
+                <li><span>&#8722;</span><span>-</span></li>
                 <li><span>+</span><span>=</span></li>
-                <li></li>
-                <li></li>
+                <li><span id = 'delete'>delete</span></li>
+                <li><span id = 'tab'>tab</span></li>
                 <li>Q</li>
                 <li>W</li>
                 <li>E</li>
@@ -66,7 +66,7 @@
                 <li><span>{</span><span>[</span></li>
                 <li><span>}</span><span>]</span></li>
                 <li><span>&#448;</span><span>\</span></li>
-                <li></li>
+                <li><span id = 'dot'>&#9679;</span><span id = 'caps'>caps lock</span></li>
                 <li>A</li>
                 <li>S</li>
                 <li>D</li>
@@ -78,8 +78,8 @@
                 <li>L</li>
                 <li><span>:</span><span>;</span></li>
                 <li><span>"</span><span>'</span></li>
-                <li></li>
-                <li></li>
+                <li id = 'enter-li'><span id = 'enter'>enter</span><span id = 'return'>return</span></li>
+                <li><span id = 'shift-left'>shift</span></li>
                 <li>Z</li>
                 <li>X</li>
                 <li>C</li>
@@ -90,18 +90,18 @@
                 <li><span>&lt;</span><span>,</span></li>
                 <li><span>&gt;</span><span>.</span></li>
                 <li><span>?</span><span>/</span></li>
+                <li><span id = 'shift-right'>shift</span></li>
+                <li><span id = 'fn'>fn</span></li>
+                <li><span id = 'control'>control</span></li>
+                <li id = 'option-left-li'><span id = 'alt-left'>alt</span><span id = 'option-left'>option</span></li>
+                <li id = 'command-left-li'><span id = 'connect-left'>&#8984;</span><span id = 'command-left'>command</span></li>
                 <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li>space</li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li id = 'command-right-li'><span id = 'connect-right'>&#8984;</span><span id = 'command-right'>command</span></li>
+                <li id = 'option-right-li'><span id = 'alt-right'>alt</span><span id = 'option-right'>option</span></li>
+                <li><span id = 'left'>&#9664;</span></li>
+                <li><span id = 'down'>&#9660;</span></li>
+                <li><span id = 'right'>&#9654;</span></li>
+                <li ><span id = 'up'>&#9650;</span></li>
             </ul>
         </div>
         <div class="touch">
