--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="container">
         <div class="row-fluid">
             <div>
+                <p>Enter the following command to perform the skill move</p>
                 <p><kbd class="keyboard-key nowrap">↑</kbd><kbd class="keyboard-key nowrap">↑</kbd><kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">←</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">←</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">B</kbd><kbd class="keyboard-key nowrap">A</kbd></p>
             </div>
         <div class="board">
@@ -38,19 +39,19 @@
                 <li><span id = 'f11'>F11</span></li>
                 <li><span id = 'f12'>F12</span></li>
                 <li ><span id = 'power' class="iec_power">&#x23FB;</span></li>
-                <li><span>~</span><span>`</span></li>
-                <li><span>!</span><span>1</span></li>
-                <li><span>@</span><span>2</span></li>
-                <li><span>#</span><span>3</span></li>
-                <li><span>$</span><span>4</span></li>
-                <li><span>%</span><span>5</span></li>
-                <li><span>^</span><span>6</span></li>
-                <li><span>&amp;</span><span>7</span></li>
-                <li><span>*</span><span>8</span></li>
-                <li><span>(</span><span>9</span></li>
-                <li><span>)</span><span>0</span></li>
-                <li><span>&#8722;</span><span>-</span></li>
-                <li><span>+</span><span>=</span></li>
+                <li><span id = 'u0'>~</span><span id = 'd0'>`</span></li>
+                <li><span id = 'u1'>!</span><span id = 'd1'>1</span></li>
+                <li><span id = 'u2'>@</span><span id = 'd2'>2</span></li>
+                <li><span id = 'u3'>#</span><span id = 'd3'>3</span></li>
+                <li><span id = 'u4'>$</span><span id = 'd4'>4</span></li>
+                <li><span id = 'u5'>%</span><span id = 'd5'>5</span></li>
+                <li><span id = 'u6'>^</span><span id = 'd6'>6</span></li>
+                <li><span id = 'u7'>&amp;</span><span id = 'd7'>7</span></li>
+                <li><span id = 'u8'>*</span><span id = 'd8'>8</span></li>
+                <li><span id = 'u9'>(</span><span id = 'd9'>9</span></li>
+                <li><span id = 'u0'>)</span><span id = 'd0'>0</span></li>
+                <li><span id = 'u11'>&#8722;</span><span id = 'd11'>-</span></li>
+                <li><span id = 'u12'>+</span><span id = 'd12'>=</span></li>
                 <li><span id = 'delete'>delete</span></li>
                 <li><span id = 'tab'>tab</span></li>
                 <li>Q</li>
@@ -63,9 +64,9 @@
                 <li>I</li>
                 <li>O</li>
                 <li>P</li>
-                <li><span>{</span><span>[</span></li>
-                <li><span>}</span><span>]</span></li>
-                <li><span>&#448;</span><span>\</span></li>
+                <li><span id = 'u13'>{</span><span id = 'd13'>[</span></li>
+                <li><span id = 'u14'>}</span><span id = 'd14'>]</span></li>
+                <li><span id = 'u15'>&#448;</span><span id = 'd15'>\</span></li>
                 <li><span id = 'dot'>&#9679;</span><span id = 'caps'>caps lock</span></li>
                 <li>A</li>
                 <li>S</li>
@@ -76,8 +77,8 @@
                 <li>J</li>
                 <li>K</li>
                 <li>L</li>
-                <li><span>:</span><span>;</span></li>
-                <li><span>"</span><span>'</span></li>
+                <li><span id = 'u16'>:</span><span id = 'd16'>;</span></li>
+                <li><span id = 'u17'>"</span><span id = 'd17'>'</span></li>
                 <li id = 'enter-li'><span id = 'enter'>enter</span><span id = 'return'>return</span></li>
                 <li><span id = 'shift-left'>shift</span></li>
                 <li>Z</li>
@@ -87,9 +88,9 @@
                 <li>B</li>
                 <li>N</li>
                 <li>M</li>
-                <li><span>&lt;</span><span>,</span></li>
-                <li><span>&gt;</span><span>.</span></li>
-                <li><span>?</span><span>/</span></li>
+                <li><span id = 'u18'>&lt;</span><span id = 'd18'>,</span></li>
+                <li><span id = 'u19'>&gt;</span><span id = 'd19'>.</span></li>
+                <li><span id = 'u20'>?</span><span id = 'd20'>/</span></li>
                 <li><span id = 'shift-right'>shift</span></li>
                 <li><span id = 'fn'>fn</span></li>
                 <li><span id = 'control'>control</span></li>
