--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="row-fluid">
             <div>
-                <p>Spin Kick(旋风腿)<kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">←</kbd><kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">A</kbd></p>
+                <p>Spin--Kick(旋风腿)<kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">←</kbd><kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">A</kbd></p>
 
                 <p>Shoryuken(升龙拳)<kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">D</kbd></p>
             </div>
@@ -115,6 +115,7 @@
      <div></div>
     </div>
   </div>
+  <div id = 'recentKeysDOM'></div>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.10.2.min.js"></script>
     <script src="./dist/rx.js"></script>
     <script src="./dist/rx.aggregates.js"></script>
