--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <p>Spin--Kick(旋风腿)<kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">←</kbd><kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">A</kbd></p>
 
                 <p>Shoryuken(升龙拳)<kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">D</kbd></p>
+
+                <p>Chain-Kick(连环腿)<kbd class="keyboard-key nowrap">↑</kbd><kbd class="keyboard-key nowrap">←</kbd><kbd class="keyboard-key nowrap">↑</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">A</kbd></p>
             </div>
         <div class="board">
         <div class="blackbar">
