--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>fighter arena</title>
-    <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/bootstrap/2.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/bootstrap/2.3.1/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="./vender/bootstrap.min.css">
+    <link rel="stylesheet" href="./vender/bootstrap-responsive.min.css">
 
 
 
@@ -118,11 +118,11 @@
     </div>
   </div>
   <div id = 'recentKeysDOM'></div>
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.10.2.min.js"></script>
+    <script src="./vender/jquery-1.10.2.min.js"></script>
     <script src="./dist/rx.js"></script>
     <script src="./dist/rx.aggregates.js"></script>
     <script src="./dist/rx.binding.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/rxjs-jquery/1.1.3/rx.jquery.js"></script>
+    <script src="./vender/rx.jquery.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
