--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>fighter arena</title>
+    <title>fighter trainer</title>
     <link rel="stylesheet" href="./vender/bootstrap.min.css">
     <link rel="stylesheet" href="./vender/bootstrap-responsive.min.css">
 
