--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>fighter trainer</title>
-    <link rel="stylesheet" href="./vender/bootstrap.min.css">
-    <link rel="stylesheet" href="./vender/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="./resource/bootstrap.min.css">
+    <link rel="stylesheet" href="./resource/bootstrap-responsive.min.css">
 
 
 
@@ -118,11 +118,11 @@
     </div>
   </div>
   <div id = 'recentKeysDOM'></div>
-    <script src="./vender/jquery-1.10.2.min.js"></script>
+    <script src="./resource/jquery-1.10.2.min.js"></script>
     <script src="./dist/rx.js"></script>
     <script src="./dist/rx.aggregates.js"></script>
     <script src="./dist/rx.binding.js"></script>
-    <script src="./vender/rx.jquery.js"></script>
+    <script src="./resource/rx.jquery.js"></script>
     <script src="main.js"></script>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
