--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+ -->    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>fighter trainer</title>
     <link rel="stylesheet" href="./resource/bootstrap.min.css">
