--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!--     <meta http-equiv="X-UA-Compatible" content="IE=edge" >
- -->    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title>fighter trainer</title>
     <link rel="stylesheet" href="./resource/bootstrap.min.css">
     <link rel="stylesheet" href="./resource/bootstrap-responsive.min.css">
-
-
-
     <link rel="stylesheet" type="text/css" href="basic.css">
 </head>
 <body>
@@ -17,9 +14,7 @@
         <div class="row-fluid">
             <div>
                 <p>Spin--Kick(旋风腿)<kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">←</kbd><kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">A</kbd></p>
-
                 <p>Shoryuken(升龙拳)<kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">↓</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">D</kbd></p>
-
                 <p>Chain-Kick(连环腿)<kbd class="keyboard-key nowrap">↑</kbd><kbd class="keyboard-key nowrap">←</kbd><kbd class="keyboard-key nowrap">↑</kbd><kbd class="keyboard-key nowrap">→</kbd><kbd class="keyboard-key nowrap">A</kbd></p>
             </div>
         <div class="board">
@@ -108,9 +103,7 @@
                 <li id = 'k38'><span id = 'up'>&#9650;</span></li>
             </ul>
         </div>
-        <div class="touch">
-            
-        </div>
+        <div class="touch"></div>
     </div>
     <div id = 'result' style="position: absolute; left: 45%;">
     <div style="position: relative; left: -45%;">
@@ -125,14 +118,13 @@
     <script src="./resource/rx.jquery.js"></script>
     <script src="main.js"></script>
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-77776468-10', 'auto');
-  ga('send', 'pageview');
-
-</script>
+      ga('create', 'UA-77776468-10', 'auto');
+      ga('send', 'pageview');
+    </script>
 </body>
 </html>
